use vga-emu release version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,5 @@ description = "Iron-Wolf a Wolfenstein 3D source port"
 
 [dependencies]
 sdl2 = "0.35.2"
-vga-emu = {path = "../vga-emu"}
+vga-emu = "0.2.1"
+iwlib = {path = "../iwlib"}
