--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "iron-wolf"
+name = "iw"
 version = "0.1.0"
 edition = "2021"
+description = "Iron-Wolf a Wolfenstein 3D source port"
 
 [dependencies]
 sdl2 = "0.35.2"
 vga-emu = {path = "../vga-emu"}
-
