--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Update
+      run: sudo apt-get update
+    - name: Install SDL
+      run: sudo apt-get install libsdl2-dev libsdl2-ttf-dev
     - name: Build
       run: cargo build --verbose
     - name: Run tests
