--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,4 @@ description = "Iron-Wolf a Wolfenstein 3D source port"
 [dependencies]
 sdl2 = "0.35.2"
 vga-emu = "0.2.1"
-libiw = "0.1.0"
+libiw = {path="../libiw"} #"0.1.0"
