--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ description = "Iron-Wolf a Wolfenstein 3D source port"
 [dependencies]
 sdl2 = "0.35.2"
 vga-emu = "0.3.0" #{path="../vga-emu/"}
-libiw = "0.2.0" #{path="../libiw"}
+libiw = "0.3.0" #{path="../iw-lib"}
 
 [profile.bench]
 debug = true
