--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,12 +18,12 @@ name = "iw"
 path = "src/main.rs"
 
 [dependencies]
+serde = { version = "1.0.183", features = ["derive"] }
 cfg-if = { version = "1.0" }
 async-std = { version = "1.12.0", features = ["unstable"] }
 vga-emu = { path="../vga-emu/" } 
-libiw = "0.3.0" #{path="../iw-lib"}
 # feature web
-wasm-bindgen = { version = "0.2.88", optional = true}
+wasm-bindgen = { version = "0.2.88", optional = true, features = ["serde-serialize"]}
 console_error_panic_hook = { version = "0.1.7", optional = true }
 js-sys = { version = "0.3.65", optional = true }
 web-sys = { version = "0.3.65", optional = true, features = [
@@ -39,7 +39,6 @@ web-sys = { version = "0.3.65", optional = true, features = [
   'console'
 ]}
 wasm-timer = {version = "0.2.5", optional = true }
-
 
 [profile.bench]
 debug = true
