--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ description = "Iron-Wolf a Wolfenstein 3D source port"
 
 [dependencies]
 sdl2 = "0.35.2"
-vga-emu = "0.3.0" #{path="../vga-emu/"}
+vga-emu = {version = "0.4.0", features = ["sdl"]} #{path="../vga-emu/", features = ["sdl"]}
 libiw = "0.3.0" #{path="../iw-lib"}
 
 [profile.bench]
