--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ description = "Iron-Wolf a Wolfenstein 3D source port"
 
 [features]
 sdl = ["vga-emu/sdl"]
-web = ["vga-emu/web"]
+web = ["vga-emu/web", "dep:wasm-bindgen", "dep:console_error_panic_hook"]
 
 [lib]
 name = "iw"
@@ -21,6 +21,9 @@ path = "src/main.rs"
 async-std = { version = "1.12.0", features = ["unstable"] }
 vga-emu = {path="../vga-emu/"} #{version = "0.4.0", features = ["sdl"]} 
 libiw = "0.3.0" #{path="../iw-lib"}
+# feature web
+wasm-bindgen = { version = "0.2.87", optional = true}
+console_error_panic_hook = { version = "0.1.7", optional = true }
 
 [profile.bench]
 debug = true
