--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,21 @@ edition = "2021"
 authors = ["Michael Bohn <spaceodyssey@gmx.de>"]
 description = "Iron-Wolf a Wolfenstein 3D source port"
 
+[features]
+sdl = ["vga-emu/sdl"]
+web = ["vga-emu/web"]
+
+[lib]
+name = "iw"
+crate-type = ["cdylib", "rlib"]
+
+[[bin]]
+name = "iw"
+path = "src/main.rs"
+
 [dependencies]
-sdl2 = "0.35.2"
-vga-emu = {version = "0.4.0", features = ["sdl"]} #{path="../vga-emu/", features = ["sdl"]}
+async-std = { version = "1.12.0", features = ["unstable"] }
+vga-emu = {path="../vga-emu/"} #{version = "0.4.0", features = ["sdl"]} 
 libiw = "0.3.0" #{path="../iw-lib"}
 
 [profile.bench]
