--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ cfg-if = { version = "1.0" }
 async-std = { version = "1.12.0", features = ["unstable"] }
 futures = "0.3.30"
 vga-emu = { version = "0.5.3" } # path="../vga-emu/"
+toml = "0.8.10"
+serde_derive = "1.0.136"
 # feature web
 wasm-bindgen = { version = "0.2.90", optional = true, features = ["serde-serialize"]}
 console_error_panic_hook = { version = "0.1.7", optional = true }
