--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,6 +20,7 @@ jobs:
       uses: actions-rs/toolchain@v1
       with:
         profile: minimal
+        override: true
         toolchain: nightly
     - name: Update
       run: sudo apt-get update
