--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ path = "src/main.rs"
 serde = { version = "1.0.195", features = ["derive"] }
 cfg-if = { version = "1.0" }
 async-std = { version = "1.12.0", features = ["unstable"] }
+futures = "0.3.30"
 vga-emu = { version = "0.5.3" } # path="../vga-emu/"
 # feature web
 wasm-bindgen = { version = "0.2.90", optional = true, features = ["serde-serialize"]}
