--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -7,9 +7,10 @@
     "rust-analyzer": {
       "initialization_options": {
         "cargo": {
-          "features": "all"
+          "features": ["sdl"]
         }
       }
     }
-  }
+  },
+  "preferred_line_length": 150
 }
