--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -7,7 +7,9 @@
     "rust-analyzer": {
       "initialization_options": {
         "cargo": {
-          "features": ["sdl"]
+          "features": [
+            "sdl"
+          ]
         }
       }
     }
