--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Michael Bohn <spaceodyssey@gmx.de>"]
 description = "Iron-Wolf a Wolfenstein 3D source port"
 
 [features]
-sdl = ["vga-emu/sdl", "opl-emu/sdl"]
+sdl = ["vga-emu/sdl", "opl-emu/sdl", "sdl2"]
 web = [
     "vga-emu/web",
     "opl-emu/web",
@@ -30,9 +30,13 @@ serde = { version = "1.0.209", features = ["derive"] }
 cfg-if = "1.0"
 async-std = { version = "1.12.0", features = ["unstable"] }
 futures = "0.3.30"
-vga-emu = "0.6.1"                                           # { path="../vga-emu/" }
-opl-emu = "0.2.3"                                           #{ path = "../opl-emu/" }                          #                                          # { path = "../opl-emu/" }
+vga-emu = "0.6.1"                                           # { path = "../vga-emu/" }
+opl-emu = "0.2.3"                                           # { path = "../opl-emu/" }                                                                     #{ path = "../opl-emu/" }                          #                                          # { path = "../opl-emu/" }
 toml = "0.8.19"
+# feature sdl
+sdl2 = { version = "0.37.0", optional = true, default-features = false, features = [
+    "mixer",
+] }
 # feature web
 wasm-bindgen = { version = "0.2.93", optional = true, features = [
     "serde-serialize",
