--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ web = [
     "dep:js-sys",
     "dep:wasm-timer",
 ]
+tracing = ["dep:tracing", "dep:tracing-subscriber", "dep:tracing-appender"]
 
 [lib]
 name = "iw"
@@ -26,6 +27,7 @@ name = "iw"
 path = "src/main.rs"
 
 [dependencies]
+
 serde = { version = "1.0.216", features = ["derive"] }
 cfg-if = "1.0"
 async-std = { version = "1.13.0", features = ["unstable"] }
@@ -33,10 +35,21 @@ futures = "0.3.31"
 vga-emu = "0.7.1"                                           # { path = "../vga-emu/" }
 opl-emu = "0.2.4"                                           # { path = "../opl-emu/" }                                                                                                              #{ path = "../opl-emu/" }                          #                                          # { path = "../opl-emu/" }
 toml = "0.8.19"
+
+# feature tracing
+tracing = { version = "0.1.41", optional = true, default-features = false, features = [
+    "attributes",
+] }
+tracing-subscriber = { version = "0.3.19", optional = true, default-features = false, features = [
+    "json",
+] }
+tracing-appender = { version = "0.2.3", optional = true, default-features = false }
+
 # feature sdl
 sdl2 = { version = "0.37.0", optional = true, default-features = false, features = [
     "mixer",
 ] }
+
 # feature web
 wasm-bindgen = { version = "0.2.99", optional = true, features = [
     "serde-serialize",
