--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -8,7 +8,8 @@
       "initialization_options": {
         "cargo": {
           "features": [
-            "sdl"
+            "sdl",
+            "tracing"
           ]
         }
       }
