fullscreen on startup support (with config option)

--- a/default_iw_config.toml
+++ b/default_iw_config.toml
@@ -32,6 +32,10 @@ fast_psyched = false
 # is enabled.
 enable_debug = false
 
+# Start the game in fullscreen mode. Can be toggeled
+# in-game with ALT+F.
+fullscreen = true
+
 [mods]
 # nothing yet, planned:
 # - brutal mod
