--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ toml = "0.9.5"
 tokio = { version = "1.47.1", features = ["rt", "time"] }
 vga-emu = "0.7.9"                                         # { path = "../vga-emu/" }
 opl-emu = "0.2.8"                                         # { path = "../opl-emu/" }
+web-time = "1.1.0" # std::time for web that needs an crate to be compatible :/
 
 # feature tracing
 tracing = { version = "0.1.41", optional = true, default-features = false, features = [
