--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -8,8 +8,7 @@
       "initialization_options": {
         "cargo": {
           "features": [
-            "web",
-            "tracing"
+            "sdl"
           ]
         }
       }
