--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,15 +6,26 @@ authors = ["Michael Bohn <spaceodyssey@gmx.de>"]
 description = "Iron-Wolf a Wolfenstein 3D source port"
 
 [features]
-sdl = ["vga-emu/sdl", "opl-emu/sdl", "sdl2", "tokio/rt-multi-thread"]
+sdl = [
+    "vga-emu/sdl2",
+    "opl-emu/sdl",
+    "sdl2",
+    "tokio/rt-multi-thread"
+]
 web = [
     "vga-emu/web",
     "opl-emu/web",
+    "tokio/rt",
     "dep:wasm-bindgen",
     "dep:console_error_panic_hook",
     "dep:web-sys",
     "dep:js-sys",
-    "dep:wasm-timer",
+]
+test = [
+    "vga-emu/test",
+    "opl-emu/sdl",
+    "sdl2",
+    "tokio/rt-multi-thread",
 ]
 tracing = [
     "vga-emu/tracing",
@@ -35,10 +46,10 @@ path = "src/main.rs"
 serde = { version = "1.0.219", features = ["derive"] }
 cfg-if = "1.0.3"
 toml = "0.9.5"
-tokio = { version = "1.47.1", features = ["rt", "time"] }
-vga-emu = "0.7.9"                                         # { path = "../vga-emu/" }
-opl-emu = "0.2.8"                                         # { path = "../opl-emu/" }
+vga-emu = "0.8.0" # { path = "../vga-emu/" }                                         # { path = "../vga-emu/" }
+opl-emu = "0.2.8" # { path = "../opl-emu/" }
 web-time = "1.1.0" # std::time for web that needs an crate to be compatible :/
+tokio = { version = "1.47.1", default-features = false }
 
 # feature tracing
 tracing = { version = "0.1.41", optional = true, default-features = false, features = [
@@ -53,6 +64,7 @@ tracing-appender = { version = "0.2.3", optional = true, default-features = fals
 sdl2 = { version = "0.38.0", optional = true, default-features = false, features = [
     "mixer",
 ] }
+libc = "0.2.176" # temp override, until sdl3/mixed can be used which also will resolve the dependency conflict around libc
 
 # feature web
 wasm-bindgen = { version = "0.2.100", optional = true, features = [
