--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,15 +20,12 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install Rust
         run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
+
       - name: Update
-        run: sudo apt-get update
-      - name: Install SDL
-        run: sudo apt-get install libsdl2-dev libsdl2-ttf-dev libsdl2-mixer-dev
-      - name: Build SDL
-        run: cargo build --features sdl --verbose
-      - name: Test SDL
-        run: cargo test --features sdl --verbose
-      - name: Build Web
-        run: cargo build --features web --verbose
-      - name: Test Web
-        run: cargo test --features web --verbose
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+                      just libsdl2-dev libsdl2-ttf-dev libsdl2-mixer-dev
+
+      - name: Test All
+        run: just test-all
