--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,8 +46,8 @@ path = "src/main.rs"
 serde = { version = "1.0.228", features = ["derive"] }
 cfg-if = "1.0.4"
 toml = "0.9.8"
-vga-emu = "0.8.1" # { path = "../vga-emu/" }                                         # { path = "../vga-emu/" }
-opl-emu = "0.2.8" # { path = "../opl-emu/" }
+vga-emu = "0.8.2"  # { path = "../vga-emu/" }
+opl-emu = "0.2.8"  # { path = "../opl-emu/" }
 web-time = "1.1.0" # std::time for web that needs an crate to be compatible :/
 tokio = { version = "1.48.0", default-features = false }
 
