--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,17 +75,22 @@ wasm-bindgen-futures = { version = "0.4.56", optional = true }
 console_error_panic_hook = { version = "0.1.7", optional = true }
 js-sys = { version = "0.3.83", optional = true }
 web-sys = { version = "0.3.83", optional = true, features = [
-    'Document',
-    'Window',
-    'HtmlInputElement',
-    'MouseEvent',
-    'File',
-    'FileList',
-    'FileReader',
-    'Blob',
-    'Performance',
-    'Response',
-    'console',
+    "Document",
+    "Window",
+    "HtmlInputElement",
+    "MouseEvent",
+    "File",
+    "FileList",
+    "FileReader",
+    "Blob",
+    "Performance",
+    "Response",
+    "console",
+    "AudioContext",
+    "AudioContextOptions",
+    "AudioBuffer",
+    "AudioParam",
+    "AudioBufferSourceNode",
 ] }
 wasm-timer = { version = "0.2.5", optional = true }
 
