--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,27 +45,27 @@ path = "src/main.rs"
 [dependencies]
 serde = { version = "1.0.228", features = ["derive"] }
 cfg-if = "1.0.4"
-toml = "0.9.10"
+toml = "1.0.3+spec-1.1.0"
 vga-emu = "0.8.5"  # { path = "../vga-emu/" }
 opl-emu = "0.4.2"  # { path = "../opl-emu/" }
 web-time = "1.1.0" # std::time for web that needs an crate to be compatible :/
-tokio = { version = "1.48.0", default-features = false }
+tokio = { version = "1.49.0", default-features = false }
 
 # feature sdl
 sdl2 = { version = "0.38.0", optional = true, default-features = false, features = [
     "mixer",
 ] }
-libc = "0.2.177" # temp override, until sdl3/mixed can be used which also will resolve the dependency conflict around libc
+libc = "0.2.182" # temp override, until sdl3/mixed can be used which also will resolve the dependency conflict around libc
 
 # feature web
-wasm-bindgen = { version = "0.2.106", optional = true, features = [
+wasm-bindgen = { version = "0.2.114", optional = true, features = [
     "serde-serialize",
 ] }
 serde-wasm-bindgen = { version = "0.6.5", optional = true }
-wasm-bindgen-futures = { version = "0.4.56", optional = true }
+wasm-bindgen-futures = { version = "0.4.64", optional = true }
 console_error_panic_hook = { version = "0.1.7", optional = true }
-js-sys = { version = "0.3.83", optional = true }
-web-sys = { version = "0.3.83", optional = true, features = [
+js-sys = { version = "0.3.91", optional = true }
+web-sys = { version = "0.3.91", optional = true, features = [
     "HtmlInputElement",
     "File",
     "FileList",
